Fix syntax in 1.6 release post.

--- a/_posts/2015-08-01-pgbouncer-1-6.md
+++ b/_posts/2015-08-01-pgbouncer-1-6.md
@@ -8,32 +8,36 @@ category: pgbouncer
 
   * Load user password hash from postgres database.
   * Pooling mode can be configured both per-database and per-user.
-  * Per-database and per-user connection limits: max_db_connections and
-    max_user_connections.
+  * Per-database and per-user connection limits: `max_db_connections` and
+    `max_user_connections`.
   * Add DISABLE/ENABLE commands to prevent new connections.
   * New preferred DNS backend: c-ares.
-  * Config files have '%include FILENAME' directive to allow configuration
+  * Config files have `%include FILENAME` directive to allow configuration
     to be split into several files.
 
 <!--more-->
 
 ### The full changelog:
 
-= Features =
+#### Features
 
   * Load user password hash from postgres database.
     New parameters:
-      auth_user - user to use for connecting same db and fetching user info.
-                  Can be set per-database too.
-      auth_query - SQL query to run under auth_user.
-           Default: "SELECT usename, passwd FROM pg_shadow WHERE usename=$1"
+
+      auth_user
+:           user to use for connecting same db and fetching user info.
+            Can be set per-database too.
+
+      auth_query
+:          SQL query to run under `auth_user`.
+           Default: `SELECT usename, passwd FROM pg_shadow WHERE usename=$1`
 
     (Cody Cutrer)
 
   * Pooling mode can be configured both per-database and per-user.
     (Cody Cutrer)
 
-  * Per-database and per-user connection limits: max_db_connections and
+  * Per-database and per-user connection limits: `max_db_connections` and
     max_user_connections.
     (Cody Cutrer / Pavel Stehule)
 
@@ -51,16 +55,16 @@ category: pgbouncer
     c-ares <= 1.10 is used IPv4-only.  So PgBouncer will drop other backends
     only when c-ares >1.10 (still unreleased) has been out some time...
 
-  * Show remote_pid in SHOW CLIENTS/SERVERS.  Available for clients that
+  * Show `remote_pid` in SHOW CLIENTS/SERVERS.  Available for clients that
     connect over unix sockets and both tcp and unix socket server.
     In case of tcp-server, the pid is taken from cancel key.
 
-  * Add separate config param (dns_nxdomain_ttl) for controlling
+  * Add separate config param (`dns_nxdomain_ttl`) for controlling
     negative dns caching.
     (Cody Cutrer)
 
-  * Add the client host IP address and port to application_name.
-    This is enabled by a config parameter application_name_add_host
+  * Add the client host IP address and port to `application_name`.
+    This is enabled by a config parameter `application_name_add_host`
     which defaults to 'off'.
     (Andrew Dunstan)
 
@@ -68,7 +72,7 @@ category: pgbouncer
     to be split into several files.
     (Andrew Dunstan)
 
-= Fixes =
+#### Fixes
 
   * fix launching new connections during maintenance
     (Cody Cutrer)
@@ -78,9 +82,9 @@ category: pgbouncer
 
   * Proper invalidation for autodbs
 
-  * ipv6: Set IPV6_V6ONLY on listen socket.
+  * ipv6: Set `IPV6_V6ONLY` on listen socket.
 
-  * win32: Don't set SO_REUSEADDR on listen socket.
+  * win32: Don't set `SO_REUSEADDR` on listen socket.
 
   * Fix IPv6 address memcpy
 
@@ -102,10 +106,10 @@ category: pgbouncer
   * Fix errors detected by Coverty.
     (Euler Taveira)
 
-  * Disable server_idle_timeout when server count gets below min_pool (#60)
+  * Disable `server_idle_timeout` when server count gets below `min_pool` (#60)
     (Marko Kreen)
 
-= Cleanups =
+#### Cleanups
 
   * log: wrap ipv6 address with []
 
