--- a/_posts/2016-02-18-pgbouncer-1-7.1.md
+++ b/_posts/2016-02-18-pgbouncer-1-7.1.md
@@ -4,7 +4,7 @@ title: PgBouncer 1.7.1
 category: pgbouncer
 ---
 
-PgBouncer 1.7.1 maintentance release is out.  It contains mainly tuning
+PgBouncer 1.7.1 maintenance release is out.  It contains mainly tuning
 of TLS-related code.  See full details in 
 [changelog](/changelog.html#pgbouncer-17x).
 
