--- a/_posts/2016-02-26-pgbouncer-1-7-2.md
+++ b/_posts/2016-02-26-pgbouncer-1-7-2.md
@@ -4,7 +4,7 @@ title: PgBouncer 1.7.2
 category: pgbouncer
 ---
 
-PgBouncer 1.7.2 maintentance release is out.  Main fixes
+PgBouncer 1.7.2 maintenance release is out.  Main fixes
 are for memory cleanup code introduced in 1.7.1.
 See full details in [changelog](/changelog.html#pgbouncer-17x).
 
